# biopredyn

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  README.md  README.txt
Doc/: CMakeLists.txt  CTestConfig.cmake
Doc/CMake/: CMakeLists.txt  CTestCustom.ctest.in  FindDocBook.cmake  FindJLatexMath.cmake  FindcsmExternals.cmake  UseDocBook.cmake  ascii-art.xsl  aspell.en.pws  convert.sh  convert_flat_tree_to_targetset_tree.xsl  cosmodocbookcommon.fo.xsl.in  cosmodocbookcommon.html.xsl.in  cosmodocbookcommon.xsl  doxygen2docbook.xsl  fop.xconf  indent.xsl  logging.properties  myhtml.xsl  sitemap.xml.in  sort.xsl  tidy.config  xmldepend.xsl
Doc/DocBook/: bpddocbookcommon.fo.xsl.in  bpddocbookcommon.html.xsl.in  bpddocbookcommon.xsl
Doc/IntegratedSoftwareSuite/: CMakeLists.txt  DesignNotes.xml  GraphicalUserInterfaceRequirementsGuide.xml  IntegratedSoftwareSuiteRequirementsGuide.xml
Doc/IntegratedSoftwareSuite/DesignNotes/: Architecture.xml  CMakeLists.txt  Implementation.xml  Introduction.xml  Preface.xml  References.xml  Requirements.xml
Doc/IntegratedSoftwareSuite/DesignNotes/Sketches/: CMakeLists.txt  biopredyn_uml.graphml  data_generation_component.graphml  execute_task.dia  model_component.graphml  opening_resource.dia  output_component.graphml  parameter.graphml  simulation_component.graphml  task_component.graphml  top_workflow.graphml  ui_prototype_uml_design.graphml  variable.graphml
Doc/IntegratedSoftwareSuite/GraphicalUserInterfaceRequirements/: Introduction.xml  Preface.xml  References.xml  Requirements.xml
Doc/IntegratedSoftwareSuite/Requirements/: Introduction.xml  Preface.xml  References.xml  Specifications.xml  UseCases.xml
Doc/LaTeX/CMSB2014/: abstract.tex  activity.dia  goldbeter_simulation.xml  poster.tex  proposal_complete.eps  references.bib  script_example.py  script_example_2.py  simulation_workflows.tex  workflow_instance.graphml
Doc/Prototype/: CMakeLists.txt  PrototypeUserGuide.xml  TrainingGuide.xml  prototype_uml.graphml  ui_prototype_uml.graphml
Doc/Prototype/CustomizationLayer/fo/: PrototypeGuide.xsl.in
Doc/Prototype/CustomizationLayer/html/: PrototypeGuide.xsl.in
Doc/Prototype/Training/: BasicSimulation.xml  Introduction.xml  PostProcessing.xml  PreProcessing.xml  RepeatingTasks.xml  ScriptingExperiments.xml
Doc/Prototype/UserGuide/: Installation.xml  Introduction.xml  Preface.xml  Usage.xml
Prototype/: CMakeLists.txt  CopasiFlow.py  FEBS.xml  README.txt  SBMLModel.py  SedMLFlow.py  data.py  exp_data_1.txt  exp_data_2.txt  main.py  model.py  output.py  result.py  simulation.py  task.py  workflow.py
Prototype/CMake/: FindLIBBZIP2.cmake  FindLIBSBML.cmake  FindXSD.cmake
Prototype/Data/: FEBS.cps  FEBS.xml  FEBS_UniformTimeCourse.xml  FEBS_copasi.xml  exp_error_1.txt
Prototype/Doxygen/: CMakeLists.txt
Prototype/Schemas/: biopredyn.xsd
Prototype/XSLT/: README.txt  remove_empty_annotations.xsl  remove_sbsi_annotation.xsl
Prototype/data/: FEBS_UniformTimeCourse.xml  FEBS_antimony.xml  FEBS_catalysis.xml  FEBS_numerical_data.xml
Prototype/data/training/: script_example.py  training_1_1.xml  training_2_1.xml  training_2_2.xml  training_2_3.xml  training_3_1.xml  training_3_2.xml  training_3_3.xml  training_4_1.xml  training_4_2.xml
Prototype/doxygen/: CMakeLists.txt  MainPage.dox  doxygen.config.in
Prototype/python/: CMakeLists.txt  setup.py  setup.py.in
Prototype/python/biopredyn/: README.md  __init__.py  algorithm.py  biopredyn.py  biopredynCL.py  biopredynUI.py  change.py  data.py  datagenerator.py  main.py  main.py.in  model.py  output.py  parameter.py  range.py  ranges.py  resources.py  result.py  signals.py  simulation.py  statistics.py  task.py  ui_project.py  variable.py  workflow.py
Prototype/python/biopredyn/ui/: __init__.py  dialogbox.py  mainwindow.py  navigationtree.py  project.py  tabpanel.py  tree.py
Prototype/scripts/: FEBS_antimony.xml  FEBS_antimony_4.xml  FEBS_antimony_solved.xml  FEBS_copasi.xml  README.md  data_generation.py  generate_data.xml  model_discrimination.py  parameter_estimation.py  simulation_4.xml  solver_comparison.py  wf_febs_1.py  wf_febs_3.py  wf_febs_4.py  wf_febs_5.py  wf_febs_6.py
Prototype/scripts/training/: febs_model_changed.xml  script_example.py  training_3_1.xml  training_3_2.xml  training_3_3.xml  training_4_1.xml  training_4_2.xml
Prototype/src/: CMakeLists.txt  README.md  README.txt
Prototype/src/libBioPreDyn/: CMakeLists.txt  biopredyn.i  biopredyn.xsd
Prototype/src/libBioPreDyn/BioPreDyn/: Document.cpp  Document.h  all-include.h  biopredyn_engine.h
Prototype/src/libnuml-1.0.1/: CMakeLists.txt
Prototype/src/libnuml-1.0.1/examples/: CMakeLists.txt
Prototype/src/libnuml-1.0.1/src/: CMakeLists.txt
Prototype/src/libsbml-5.10.0/: CMakeLists.txt  comp-package.cmake  fbc-package.cmake  layout-package.cmake  render-package.cmake
Prototype/src/libsbml-5.10.0/docs/: CMakeLists.txt
Prototype/src/libsbml-5.10.0/examples/: CMakeLists.txt  arrays-package.cmake  comp-package.cmake  distrib-package.cmake  (+8 more)
Prototype/src/libsbml-5.8.0/: CMakeLists.txt
Prototype/src/libsbmlsim-1.1.0/: API.txt  AUTHORS.txt  CMakeLists.txt  NEWS.txt  README.txt
Prototype/src/libsedml/: CMakeLists.txt  LICENSE.txt  README.md  generate.bat  generate.sh
Prototype/src/libsedml-0.2.1/: CMakeLists.txt
Prototype/testing/: 3D_data.csv  CMakeLists.txt  FEBS_antimony.xml  FEBS_copasi.xml  FEBS_numerical_data.xml  FEBS_test_3D_graphical_output.xml  FEBS_test_URN_model.xml  FEBS_test_graphical_output.xml  FEBS_test_report.xml  test.py  test.py.in  test_3D_graphical_output.xml  test_add_xml.xml  test_change_attribute.xml  test_change_xml.xml  test_compute_change.xml  test_data_generation.xml  test_fba_cobrapy.xml  test_fba_libfbc.xml  test_graphical_output.xml  test_one_step.xml  test_remove_xml.xml  test_repeated_task_functional.xml  test_repeated_task_uniform.xml  test_repeated_task_vector.xml  test_report.xml  time_series_data.csv
libBioPreDyn/: CMakeLists.txt  README.txt  biopredyn-pskel.cxx  biopredyn-pskel.hxx  biopredyn.i  biopredyn.xsd  setup.py
(+615 files in other folders)
